coutdown alignment bug fix

--- a/personalWebsite/src/Countdown.css
+++ b/personalWebsite/src/Countdown.css
@@ -1,5 +1,5 @@
 .countdown {
-  width: 100%;
+  width: 80%;
   padding: 20px;
   border: 1px solid var(--color-countdown-border);
   border-radius: 20px;
@@ -7,7 +7,7 @@
   display: flex;
   flex-direction: column;
   gap: 16px;
-  margin-bottom: 30px;
+
 }
 
 .countdown__heading {
@@ -49,4 +49,3 @@
   font-size: 18px;
   color: var(--color-countdown-finished);
 }
-
